--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <h1>Chat APP by HéctorDíaz.</h1></body><br>
-    <!-- <button id="increment">+1</button> -->
-    <form id="send">
+
+    <div id="messages"></div>
+
+    <form id="message-form">
       <h1>Send Message</h1>
+
       <div class="field">
         <label for="content">Content:</label>
         <input type="text" id="content" name="content" placeholder="Enter your message" />
@@ -21,6 +24,22 @@
     </form>
     <br>
     <button id="send-location">Send Location</button>
+
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{createdAt}} - {{message}}</p>
+      </div>
+    </script>
+
+    <script id="location-template" type="text/html">
+      <div>
+        <p>{{createdAt}} -<a href={{url}}> My current location!</a></p>
+      </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
   </body>
