--- a/public/index.html
+++ b/public/index.html
@@ -5,42 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHAT APP</title>
+    <link rel="icon" href="./img/favicon.png">
+    <link rel="stylesheet" href="./css/styles.min.css">
   </head>
+
+
   <body>
-    <h1>Chat APP by HéctorDíaz.</h1></body><br>
 
-    <div id="messages"></div>
+  <div class="centered-form">
+    <div class="centered-form__box">
+      <h1>Join</h1>
+      <form action="/chat.html" >
+        <label>Display name</label>
+        <input type="text" name="username" placeholder="Display name" required>
+        <label>Room</label>
+        <input type="text" name="room" placeholder="Room" required>
+        <button>Join</button>
+      </form>
+    </div>
+  </div>
+  
 
-    <form id="message-form">
-      <h1>Send Message</h1>
-
-      <div class="field">
-        <label for="content">Content:</label>
-        <input type="text" id="content" name="content" placeholder="Enter your message" />
-        <small></small>
-      </div>
-     
-      <button type="submit">Send</button>
-    </form>
-    <br>
-    <button id="send-location">Send Location</button>
-
-    <script id="message-template" type="text/html">
-      <div>
-        <p>{{createdAt}} - {{message}}</p>
-      </div>
-    </script>
-
-    <script id="location-template" type="text/html">
-      <div>
-        <p>{{createdAt}} -<a href={{url}}> My current location!</a></p>
-      </div>
-    </script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./js/chat.js"></script>
   </body>
 </html>
