--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="chat">
-      <div class="chat__sidebar">
+      <div id="sidebar" class="chat__sidebar">
 
       </div>
       <div class="chat__main">
@@ -19,7 +19,7 @@
         <div class="compose">
 
           <form id="message-form">        
-              <input type="text" id="content" name="content" placeholder="Enter your message" />
+              <input type="text" id="content" name="content" placeholder="Enter your message" required autocomplete="off" />
               <button type="submit">Send</button>
           </form>
           <button id="send-location">Send Location</button>
@@ -38,7 +38,7 @@
     <script id="message-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some User Name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
@@ -48,11 +48,21 @@
     <script id="location-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some User Name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p><a href={{url}}> My current location!</a></p>
       </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+          {{#users}}
+            <li>{{username}}</li>
+          {{/users}}
+        </ul>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
